# devoir

./: Anchor.toml  package-lock.json  projects.md  readme.md
programs/devoir/: Cargo.toml
programs/devoir/src/: lib.rs
resources/: Ch08 Tokens (2).pptx  Introduction à Solana.pptx
resources/Day 01/: Ch01 Introduction à la Blockhain.pptx  Structure générale de Blocs Bitcoin.pptx
resources/Day 02/: Ch03 IPFS.pptx  Ch04 Smart Contracts.pptx
tests/: devoir.ts
